--- a/global.css
+++ b/global.css
@@ -7,14 +7,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;1,200&family=Dancing+Script:wght@700&display=swap');
 
-* {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-    text-decoration: none;
-}
-
 /*
 H1
 font-family: 'Dancing Script', cursive;
@@ -36,7 +28,7 @@ Light 300
  */
 
 /* DINAMIC CSS */
-/* :root{
+ :root{
     --h1-font-title: 'Dancing Script', cursive;
     --h3-font-subtitle: 'Bitter', serif;
     --p--font-text: 'Bitter', serif;
@@ -56,15 +48,15 @@ Light 300
     --bg-base: #ebebeb;
     --bg-base-2: #F2CD88;
 
-    --buttom-text: #f2f2f2;
+    --button-text: #f2f2f2;
 
     --text-color: #f2f2f2;
 
-    --buttom-color-r: #8C1B2F;
-    --buttom-color-r-hover: #027373;
+    --button-color-r: #8C1B2F;
+    --button-color-r-hover: #027373;
 
-    --buttom-color-g: #A6BF49;
-    --buttom-color-g-hover: #557314;
+    --button-color-g: #A6BF49;
+    --button-color-g-hover: #557314;
 
     --details-o: #F2B077;
     --details-g: #2C4001;
@@ -73,25 +65,31 @@ Light 300
 /* GENERAL CONFIGS */
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: normal;
 }
 img {
+    display: block;
     max-width: 100%;
     border-radius: 6px;
+}
+header, footer {
+    text-align: center;
 }
 h1 {
     font-family: var(--h1-font-title);
     font-size: var(--h1-size);
-    text-align: center;
-    margin: 0.8rem;
+    margin: 1.2rem;
 }
 h3 {
     font-family: var(--h3-font-subtitle);
-    font-style: italic;
-    font-weight: 200;
     font-size: var(--h3-size);
-    text-align: center;
+    font-weight: bold;
+    font-style: italic;
 }
 p {
     font-size: var(--p-size);
@@ -101,116 +99,56 @@ p, .btn {
     font-weight: 400;
 }
 .btn {
-    color: var(--buttom-text);
+    padding: 10px;
+    font-size: 0.680rem;
+    cursor: pointer;
+    color: var(--button-text);
     font-weight: 600;
     border-radius: 6px;
-    padding: 20px 15px;
     cursor: pointer;
+    border: none;
+    display: inline-block;
 }
+.container {
+    display: block;
+}
+
+
+@media (max-width: 600px) {
+
+}
+
+
 
 /* MOBILE FIRST: ABOUT */
-#header {
+/* header {
     padding: 10vw;
-}
-
-.bg-1 {
-    background: var(--bg-base);
-}
-.bg-photo {
-    background-image: url('./media/moon.jpg');
-    background-position: 60%;
-    margin: 5vh 0 15vh 0;
-    padding: 25px;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0 2rem;
-}
-.info {
-    display: grid;
-}
-.btn-see {
-    place-self: flex-start end;
-    font-size: var(--btn-see-font-size);
-    background: var(--buttom-color-r);
-}
-.btn-see:hover {
-    background: var(--buttom-color-r-hover);
-    border: 1px solid var(--details-g);
-    box-shadow: 1px 3px 5px black;
-}
-.btn-see:focus {
-    background: var(--buttom-color-r-hover);
-}
-.btn-buy {
-    background: var(--buttom-color-g);
-    font-size: var(--btn-buy-font-size);
-    z-index: 2;
-    position: relative;
-    left: -48vw;
-    bottom: 40vw;
-}
-.btn-buy:hover {
-    background: var(--buttom-color-g-hover);
-    border: 1px solid var(--details-g);
-    box-shadow: 1px 3px 5px black;
-}
-.btn-buy:focus {
-    background: var(--buttom-color-g-hover);
-}
-.text-description {
-    margin: 1.2rem;
-    padding: 0 6vw;
-    font-size: var(--p-size);
-    color: var(--text-color);
-    text-indent: 1.2rem;
-    word-spacing: 0.2rem;
 } */
 
 /* MOBILE FISRT: STORE HERE */
-.extra-photos {
-    max-height: 110vw;
-    background: var(--bg-base-2);
-}
-.photo-3, .photo-4 {
-    position: relative;
-}
-.photo-3 {
-    z-index: 1;
-    width: 70vw;
-    top: -4vw;
-    left: 5vw;
-}
-.photo-4 {
-    width: 65vw;
-    top: -14vw;
-    left: 30vw;
-}
+
 
 /* MOBILE FIRTS: FOOTER */
-#footer {
-    padding: 25vw 18vw;
-}
 
-@media (min-width: 250px) and (max-width: 960px) {
+
+
+/* @media (min-width: 250px) and (max-width: 960px) {
     .grid {
         display: flex;
         flex-direction: column;
     }
-}
+} */
 
-@media (min-width: 960px) and (max-width: 1024px) {
+/* @media (min-width: 960px) and (max-width: 1024px) {
     .photo-2 {
         height: 460px;
     }
     .text-description {
         padding: 2vw 3vw;
     }
-}
+} */
 
-@media (min-width: 1024px) and (max-width: 1800px) {
+/* @media (min-width: 1024px) and (max-width: 1800px) {
     .bg-2 {
         max-width: 95%;
         margin: 0 auto;
@@ -270,4 +208,4 @@ p, .btn {
     #footer p {
         font-size: var(--p-maxscreen-size);
     }
-}
+} */
