--- a/global.scss
+++ b/global.scss
@@ -1,66 +1,44 @@
-@import url(assets/style/login-cad.html);
-@import url(assets/style/header.css);
-@import url(assets/style/main.css);
-@import url(assets/style/gallery.css);
-@import url(assets/style/ped-form.css);
-@import url(assets/style/footer.css);
+@import 'assets/src/style/login_cad';
+@import 'assets/src/style/header';
+@import 'assets/src/style/main';
+@import 'assets/src/style/gallery';
+@import 'assets/src/style/ped_form';
+@import 'assets/src/style/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;1,200&family=Dancing+Script:wght@700&display=swap');
 
-/*
-H1
-font-family: 'Dancing Script', cursive;
-{
-Bold 700
-}
-
-font-family: 'Bitter', serif; 
-{
-Subtitle:
-ExtraLight 200 Italic
-
-Text:
-Regular 400
-
-Extra text fine:
-Light 300
-}
- */
-
 /* DINAMIC CSS */
- :root{
-    --h1-font-title: 'Dancing Script', cursive;
-    --h3-font-subtitle: 'Bitter', serif;
-    --p--font-text: 'Bitter', serif;
+    $h1-font-title: 'Dancing Script', cursive;
+    $h3-font-subtitle: 'Bitter', serif;
+    $p-font-text: 'Bitter', serif;
 
-    --h1-size: 15vw;
-    --h3-size: 3vw;
-    --p-size: 3.4vw;
-    --btn-see-font-size: 3vw;
-    --btn-buy-font-size: 4vw; 
+    $h1-size: 15vw;
+    $h3-size: 3vw;
+    $p-size: 3.4vw;
+    $btn-see-font-size: 3vw;
+    $btn-buy-font-size: 4vw; 
 
-    --h1-maxscreen-size: 5vw;
-    --h3-maxscreen-size: 1.2vw;
-    --p-maxscreen-size: 1.4vw;
-    --btn-see-maxscreen-font-size: 1.3vw;
-    --btn-buy--maxscreenfont-size: 2.3vw;
+    $h1-maxscreen-size: 5vw;
+    $h3-maxscreen-size: 1.2vw;
+    $p-maxscreen-size: 1.4vw;
+    $btn-see-maxscreen-font-size: 1.3vw;
+    $btn-buy-maxscreenfont-size: 2.3vw;
 
-    --bg-base: #ebebeb;
-    --bg-base-2: #F2CD88;
+    $bg-base: #ebebeb;
+    $bg-base-2: #F2CD88;
 
-    --button-text: #f2f2f2;
+    $button-text: #f2f2f2;
 
-    --text-color: #f2f2f2;
+    $text-color: #f2f2f2;
 
-    --button-color-r: #8C1B2F;
-    --button-color-r-hover: #027373;
+    $button-color-r: #8C1B2F;
+    $button-color-r-hover: #027373;
 
-    --button-color-g: #A6BF49;
-    --button-color-g-hover: #557314;
+    $button-color-g: #A6BF49;
+    $button-color-g-hover: #557314;
 
-    --details-o: #F2B077;
-    --details-g: #2C4001;
-}
+    $details-o: #F2B077;
+    $details-g: #2C4001;
 
 /* GENERAL CONFIGS */
 * {
@@ -72,6 +50,7 @@ Light 300
     font-family: sans-serif;
     font-weight: normal;
 }
+
 img {
     display: block;
     max-width: 100%;
@@ -81,28 +60,28 @@ header, footer {
     text-align: center;
 }
 h1 {
-    font-family: var(--h1-font-title);
-    font-size: var(--h1-size);
+    font-family: var($h1-font-title);
+    font-size: var($h1-size);
     margin: 1.2rem;
 }
 h3 {
-    font-family: var(--h3-font-subtitle);
-    font-size: var(--h3-size);
+    font-family: var($h3-font-subtitle);
+    font-size: var($h3-size);
     font-weight: bold;
     font-style: italic;
 }
 p {
-    font-size: var(--p-size);
+    font-size: var($p-size);
 }
 p, .btn {
-    font-family: var(--p-font-text);
+    font-family: var($p-font-text);
     font-weight: 400;
 }
 .btn {
     padding: 10px;
     font-size: 0.680rem;
     cursor: pointer;
-    color: var(--button-text);
+    color: var($button-text);
     font-weight: 600;
     border-radius: 6px;
     cursor: pointer;
@@ -152,10 +131,10 @@ p, .btn {
     .bg-2 {
         max-width: 95%;
         margin: 0 auto;
-        background-color: var(--details-g);
+        background-color: var($details-g);
     }
      .bg-1 {
-        background: var(--bg-base);
+        background: var($bg-base);
     }
     #header {
         display: flex;
@@ -165,22 +144,22 @@ p, .btn {
         padding: 2vw;
     }
     h1 {
-        font-size: var(--h1-maxscreen-size);
+        font-size: var($h1-maxscreen-size);
     }
     h3 {
-        font-size: var(--h3-maxscreen-size);
+        font-size: var($h3-maxscreen-size);
     }
     .text-description {
-        font-size: var(--p-maxscreen-size);
+        font-size: var($p-maxscreen-size);
         padding: 4vw 4vw;
     }
     .btn-see {
-        font-size: var(--btn-see-maxscreen-font-size);
+        font-size: var($btn-see-maxscreen-font-size);
         margin-right: 22vw;
     }
     .btn-buy {
         display: none;
-        font-size: var(--btn-buy--maxscreenfont-size);
+        font-size: var($btn-buy$maxscreenfont-size);
     }
     img.photo-2 {
         margin-top: 1vw;
@@ -206,6 +185,6 @@ p, .btn {
         padding: 10vw;
     }
     #footer p {
-        font-size: var(--p-maxscreen-size);
+        font-size: var($p-maxscreen-size);
     }
 } */
