fix: organization the sass and css

--- a/assets/src/style/header.scss
+++ b/assets/src/style/header.scss
@@ -1,8 +1,4 @@
-$color-black: #000;
-$button-color-r: #ff0000;
-$button-color-r-hover: #cc0000;
-$button-color-g: #00ff00;
-$button-color-g-hover: #00cc00;
+@import 'variables';
 
 header {
   h1, h3 {
