--- a/global.scss
+++ b/global.scss
@@ -1,44 +1,6 @@
-@import 'assets/src/style/login_cad';
-@import 'assets/src/style/header';
-@import 'assets/src/style/main';
-@import 'assets/src/style/gallery';
-@import 'assets/src/style/ped_form';
-@import 'assets/src/style/footer';
+@import 'paths';
 
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;1,200&family=Dancing+Script:wght@700&display=swap');
-
-/* DINAMIC CSS */
-    $h1-font-title: 'Dancing Script', cursive;
-    $h3-font-subtitle: 'Bitter', serif;
-    $p-font-text: 'Bitter', serif;
-
-    $h1-size: 15vw;
-    $h3-size: 3vw;
-    $p-size: 3.4vw;
-    $btn-see-font-size: 3vw;
-    $btn-buy-font-size: 4vw; 
-
-    $h1-maxscreen-size: 5vw;
-    $h3-maxscreen-size: 1.2vw;
-    $p-maxscreen-size: 1.4vw;
-    $btn-see-maxscreen-font-size: 1.3vw;
-    $btn-buy-maxscreenfont-size: 2.3vw;
-
-    $bg-base: #ebebeb;
-    $bg-base-2: #F2CD88;
-
-    $button-text: #f2f2f2;
-
-    $text-color: #f2f2f2;
-
-    $button-color-r: #8C1B2F;
-    $button-color-r-hover: #027373;
-
-    $button-color-g: #A6BF49;
-    $button-color-g-hover: #557314;
-
-    $details-o: #F2B077;
-    $details-g: #2C4001;
 
 /* GENERAL CONFIGS */
 * {
