--- a/style/header.css
+++ b/style/header.css
@@ -10,11 +10,11 @@ header ul li {
   text-transform: uppercase;
   border-radius: 4px;
   margin: 40px 0;
-  background-color: #ff0000;
+  background-color: #8C1B2F;
   color: #fff;
 }
 header ul li:hover {
-  background-color: #cc0000;
+  background-color: #027373;
   transition: 0.4s;
 }
 
@@ -34,10 +34,10 @@ header ul li:hover {
   cursor: pointer;
 }
 .buttons-log button.isBtnLog {
-  background-color: #00ff00;
+  background-color: #A6BF49;
 }
 .buttons-log button.isBtnLog:hover {
-  background-color: #00cc00;
+  background-color: #557314;
   transition: 0.6s;
 }
 
