--- a/assets/src/style/_variables.scss
+++ b/assets/src/style/_variables.scss
@@ -2,9 +2,9 @@ $h1-font-title: 'Dancing Script', cursive;
 $h3-font-subtitle: 'Bitter', serif;
 $p-font-text: 'Bitter', serif;
 
-$h1-size: 15vw;
-$h3-size: 3vw;
-$p-size: 3.4vw;
+$h1-size: 3rem;
+$h3-size: 0.82rem;
+$p-size: 0.87rem;
 $btn-see-font-size: 3vw;
 $btn-buy-font-size: 4vw; 
 
