--- a/global.scss
+++ b/global.scss
@@ -11,39 +11,44 @@
     text-decoration: none;
     font-family: sans-serif;
     font-weight: normal;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
 }
 
 img {
     display: block;
     max-width: 100%;
     border-radius: 6px;
+
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
 }
 header, footer {
     text-align: center;
 }
 h1 {
-    font-family: var($h1-font-title);
-    font-size: var($h1-size);
+    font-family: $h1-font-title;
+    font-size: $h1-size;
     margin: 1.2rem;
 }
 h3 {
-    font-family: var($h3-font-subtitle);
-    font-size: var($h3-size);
+    font-family: $h3-font-subtitle;
+    font-size: $h3-size;
     font-weight: bold;
     font-style: italic;
 }
 p {
-    font-size: var($p-size);
+    font-size: $p-size;
 }
 p, .btn {
-    font-family: var($p-font-text);
+    font-family: $p-font-text;
     font-weight: 400;
 }
 .btn {
     padding: 10px;
     font-size: 0.680rem;
     cursor: pointer;
-    color: var($button-text);
+    color: $button-text;
     font-weight: 600;
     border-radius: 6px;
     cursor: pointer;
@@ -93,10 +98,10 @@ p, .btn {
     .bg-2 {
         max-width: 95%;
         margin: 0 auto;
-        background-color: var($details-g);
+        background-color: $details-g;
     }
      .bg-1 {
-        background: var($bg-base);
+        background: $bg-base;
     }
     #header {
         display: flex;
@@ -106,22 +111,22 @@ p, .btn {
         padding: 2vw;
     }
     h1 {
-        font-size: var($h1-maxscreen-size);
+        font-size: $h1-maxscreen-size);
     }
     h3 {
-        font-size: var($h3-maxscreen-size);
+        font-size: $h3-maxscreen-size);
     }
     .text-description {
-        font-size: var($p-maxscreen-size);
+        font-size: $p-maxscreen-size);
         padding: 4vw 4vw;
     }
     .btn-see {
-        font-size: var($btn-see-maxscreen-font-size);
+        font-size: $btn-see-maxscreen-font-size);
         margin-right: 22vw;
     }
     .btn-buy {
         display: none;
-        font-size: var($btn-buy$maxscreenfont-size);
+        font-size: $btn-buy$maxscreenfont-size);
     }
     img.photo-2 {
         margin-top: 1vw;
@@ -147,6 +152,6 @@ p, .btn {
         padding: 10vw;
     }
     #footer p {
-        font-size: var($p-maxscreen-size);
+        font-size: $p-maxscreen-size);
     }
 } */
