feat: header_main

--- a/assets/src/style/_variables.scss
+++ b/assets/src/style/_variables.scss
@@ -1,12 +1,13 @@
 $h1-font-title: 'Dancing Script', cursive;
 $h3-font-subtitle: 'Bitter', serif;
-$p-font-text: 'Bitter', serif;
+$p-font-text: sans-serif;
 
-$h1-size: 3rem;
-$h3-size: 0.82rem;
-$p-size: 0.87rem;
-$btn-see-font-size: 3vw;
-$btn-buy-font-size: 4vw; 
+$h1-size: 6rem;
+$h3-size: 1.2rem;
+$p-size: 1.4rem;
+$btn-menu-font-size: 1rem;
+$btn-see-font-size: 1.4rem;
+$btn-buy-font-size: 1.4rem; 
 
 $h1-maxscreen-size: 5vw;
 $h3-maxscreen-size: 1.2vw;
