--- a/global.scss
+++ b/global.scss
@@ -10,7 +10,9 @@
     list-style: none;
     text-decoration: none;
     font-family: sans-serif;
+    font-size: 0.65rem;
     font-weight: normal;
+
     -webkit-user-drag: none;
     -webkit-user-select: none;
 }
@@ -19,42 +21,39 @@ img {
     display: block;
     max-width: 100%;
     border-radius: 6px;
-
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
+    margin: 3rem 0;
 }
 header, footer {
     text-align: center;
+    h1 {
+        font-family: $h1-font-title;
+        font-size: $h1-size;
+        margin-top: 4rem;
+    }
+    h3 {
+        font-family: $h3-font-subtitle;
+        font-size: $h3-size;
+        font-weight: bold;
+        font-style: italic;
+    }
 }
-h1 {
-    font-family: $h1-font-title;
-    font-size: $h1-size;
-    margin: 1.2rem;
-}
-h3 {
-    font-family: $h3-font-subtitle;
-    font-size: $h3-size;
-    font-weight: bold;
-    font-style: italic;
+
+p, .btn {
+    font-family: $p-font-text;
 }
 p {
     font-size: $p-size;
-}
-p, .btn {
-    font-family: $p-font-text;
-    font-weight: 400;
+    margin: 2rem;
 }
 .btn {
     padding: 10px;
-    font-size: 0.680rem;
     cursor: pointer;
     color: $button-text;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
+    font-weight: 400;
+    border-radius: 8px;
     border: none;
-    display: inline-block;
 }
+
 .container {
     display: block;
 }
