--- a/style/header.css
+++ b/style/header.css
@@ -2,17 +2,18 @@ header {
   margin: 2rem 0;
 }
 header h1 {
-  font-size: 3rem;
+  font-size: 6rem;
   color: #000;
 }
 header h3 {
-  font-size: 0.82rem;
+  font-size: 1.2rem;
 }
 header ul li {
   display: inline-block;
+  font-size: 1rem;
   text-transform: uppercase;
   border-radius: 4px;
-  margin: 40px 0;
+  margin: 40px 10px;
   background-color: #8C1B2F;
   color: #fff;
 }
@@ -20,26 +21,26 @@ header ul li:hover {
   background-color: #027373;
   transition: 0.4s;
 }
-
-.buttons-log {
+header .buttons-log {
   position: absolute;
   top: 0px;
   right: 0px;
   display: flex;
   justify-content: end;
 }
-.buttons-log button {
+header .buttons-log button {
   color: black;
   padding: 20px;
   margin: 5px;
   padding: 10px;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 1rem;
 }
-.buttons-log button.isBtnLog {
+header .buttons-log button.isBtnLog {
   background-color: #A6BF49;
 }
-.buttons-log button.isBtnLog:hover {
+header .buttons-log button.isBtnLog:hover {
   background-color: #557314;
   transition: 0.6s;
 }
